--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -42,27 +42,16 @@ h6 {
     position: fixed;
     right: 15px;
     bottom: 15px;
-    padding: 10px;
-    background: #3498db;
-    z-index: 99999;
-}
-
-.back-to-top i {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
     width: 40px;
     height: 40px;
-    border-radius: 4px;
-    color: white;
-    color: #fff;
-    transition: all 0.4s;
-}
-
-.back-to-top i:hover {
-    background: #57aae1;
-    color: #fff;
+    padding-top: 8px;
+    padding-left: 13px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background: #3498db;
+    z-index: 99999;
+    color: white !important;
 }
 
 
