--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -55,7 +55,7 @@
     h5,
     h6 {
         font-family: 'RamblaBold';
-        line-height: 1;
+        line-height: 1.3;
     }
     
     h1 {
@@ -115,7 +115,7 @@
             font-size: 1.3rem;
         }
         @media (min-width: $laptopBp) {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
     }
     
@@ -310,7 +310,7 @@
         // }
     }
     
-    #loesung {
+    .background-light-blue {
         background-color: rgba(0, 105, 135, 0.1);
     }
     
@@ -322,43 +322,99 @@
     }
     
     .circle-with-text {
-        background: theme-color('primary');
-        border-radius: 0.8em;
-        -moz-border-radius: 0.8em;
-        -webkit-border-radius: 0.8em;
-        color: #ffffff;
-        display: inline-block;
-        font-weight: bold;
-        line-height: 2em;
-        margin-right: 15px;
-        text-align: center;
-        width: 1.6em;
-    }
-    
-    .circle-with-text {
         display: inline-block;
         white-space: nowrap;
         vertical-align: baseline;
-        line-height: 70px;
-        height: 70px;
-        width: 70px;
+        line-height: 60px;
+        height: 60px;
+        width: 60px;
         border-radius: 50px;
         background: theme-color('primary');
         color: $white;
         opacity: 1;
-        font-size: 2rem;
+        font-weight: bold;
+        margin-right: 15px;
+        text-align: center;
+        font-size: 1.5rem;
     }
     
-    #mobile-bg {
-        background-image: url('~@/assets/img/mobile.svg');
+    .mobile-bg {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        height: 15rem;
+        width: 100%;
+        height: 20rem;
         margin: 0 1.5rem 1.5rem 1.5rem;
         @media (min-width: $landscapeBp) {
-            height: auto;
-            width: 15rem;
+            height: 30rem;
+            width: 100%;
             margin: 0;
         }
+        &.driver-bg {
+            background-image: url('~@/assets/img/mobile_driver.svg');
+        }
+        &.checkpoint-bg {
+            background-image: url('~@/assets/img/mobile_checkpoint.svg');
+        }
+        &.infographic-bg {
+            background-image: url('~@/assets/img/infographic.svg');
+        }
+    }
+    
+    @media (max-width:500px) {
+        .owl-carousel .owl-item {
+            text-align: center;
+        }
+        .owl-carousel .item {
+            float: none;
+            display: inline-block;
+        }
+    }
+    
+    .app-feature-with-icon {
+        display: inline-block!important;
+        white-space: nowrap;
+        vertical-align: baseline;
+        line-height: 60px;
+        height: 60px;
+        width: 60px;
+        border-radius: 50px;
+        background: theme-color('primary');
+        color: $white;
+        opacity: 1;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-right: 15px;
+        text-align: center;
+    }
+    
+    .team-member-box {
+        background: $white;
+        width: 100%;
+        height: 10rem;
+        border-bottom: 5px #198DB6 solid;
+        text-align: center;
+        border-radius: 10px;
+        overflow: hidden;
+        position: relative;
+        transition: 0.5s;
+        margin-bottom: 28px;
+    }
+    
+    .back-to-top {
+        position: fixed;
+        right: 15px;
+        bottom: 15px;
+        width: 40px;
+        height: 40px;
+        padding-top: 8px;
+        padding-left: 13px;
+        border-radius: 5px;
+        background: #198DB6;
+        z-index: 99999;
+        color: #fff !important;
+    }
+    
+    #footer {
+        background-color: $blue;
     }
