--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -183,7 +183,7 @@
     }
     
     #hero {
-        margin-top: 60px;
+        margin-top: 100px;
         @media (min-width: $tabletBp) {
             margin-top: 100px;
         }
@@ -415,6 +415,28 @@
         color: #fff !important;
     }
     
+    #header {
+        box-shadow: 0 2px 15px rgba(0, 0, 0, .1);
+    }
+    
     #footer {
         background-color: $blue;
+    }
+    
+    .mobile-nav-overly {
+        width: 100%;
+        height: 100%;
+        z-index: 9997;
+        top: 0;
+        left: 0;
+        position: fixed;
+        background: rgba(9, 9, 9, .6);
+        overflow: hidden;
+        transition: .2s ease-in-out;
+    }
+    
+    .navbar {
+        background: $white;
+        z-index: 9998;
+        padding: 0 15px;
     }
